--- a/sass/layout/_backdrop.scss
+++ b/sass/layout/_backdrop.scss
@@ -1,4 +1,4 @@
-/*========================= Backdrop ===================================*/
+/*========================= Backdrop for all version ===================================*/
 .backdrop {
   position: fixed;
   top: 0px;
