--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -15,6 +15,38 @@
   min-width: 200px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
+/*========================= Header mobile button ===================================*/
+.header-navbar__buttons {
+  display: inline-flex;
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  margin: 0 0 0 262px;
+  transition-property: fill;
+  transition-duration: var(--time);
+  transition-timing-function: var(--time-f);
+
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+}
+.header-navbar__buttons:hover,
+.header-navbar__buttons:focus {
+  cursor: pointer;
+  fill: var(--primery-color);
+  outline: none;
+}
+.header-navbar__buttons .header-navbar__icon-cross {
+  display: none;
+}
+.header-navbar__buttons.is-open .header-navbar__icon-cross {
+  display: block;
+}
+.header-navbar__buttons.is-open .header-navbar__icon-menu {
+  display: none;
+}
+
+/*========================= Buttons portfolio ===================================*/
 .button-section__button {
   cursor: pointer;
   font-weight: 500;
@@ -39,19 +71,22 @@
 
 /*Конец вынесения стилей кнопок*/
 
-/*========================= Buttons portfolio ===================================*/
 .button-section {
   background-color: #ffffff;
 }
 .button-section__boxes {
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
+  // justify-content: center;
   margin: 0;
-  padding: 94px 0px 50px 0px;
+  padding: 60px 0px 40px 15px;
 }
 .button-section__item:not(:last-child) {
   margin-right: 8px;
 }
 .button-section__button {
   padding: 6px 22px;
+}
+.button-section__item:nth-child(-n + 3) {
+  margin-bottom: 6px;
 }
