--- a/sass/layout/_categories.scss
+++ b/sass/layout/_categories.scss
@@ -1,7 +1,8 @@
 /*========================= Categories portfolio ===================================*/
+/*====================== Mobile version =======================*/
 .categories-section {
   background-color: #ffffff;
-  padding: 0px 0px 94px 0px;
+  padding: 0px 0px 60px 0px;
 }
 .categories {
   display: flex;
@@ -22,10 +23,7 @@
   border: 1px solid #eeeeee;
   border-top: none;
 }
-.categories__item:not(:nth-child(3n)) {
-  margin-right: 30px;
-}
-.categories__item:not(:nth-child(n + 7)) {
+.categories__item:not(:last-child) {
   margin-bottom: 30px;
 }
 .categories__title,
@@ -73,3 +71,82 @@
   color: #ffffff;
   margin: 63px 24px;
 }
+
+/*====================== Tablet version =======================*/
+
+/*====================== Desktop version =======================*/
+
+// .categories-section {
+//   background-color: #ffffff;
+//   padding: 0px 0px 94px 0px;
+// }
+// .categories {
+//   display: flex;
+//   flex-wrap: wrap;
+//   padding: 0;
+//   margin: 0;
+//   justify-content: center;
+// }
+// .categories__item {
+//   background-color: #ffffff;
+//   transition-property: box-shadow;
+//   transition-duration: var(--time);
+//   transition-timing-function: var(--time-f);
+//   display: block;
+// }
+// .categories__description {
+//   padding: 20px 0px;
+//   border: 1px solid #eeeeee;
+//   border-top: none;
+// }
+// .categories__item:not(:nth-child(3n)) {
+//   margin-right: 30px;
+// }
+// .categories__item:not(:nth-child(n + 7)) {
+//   margin-bottom: 30px;
+// }
+// .categories__title,
+// .categories__text {
+//   margin: 0 24px;
+// }
+// .categories__text {
+//   margin-top: 4px;
+// }
+// .categories__item:hover {
+//   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+//     1px 4px 6px rgba(0, 0, 0, 0.16);
+// }
+// .categories__link {
+//   display: block;
+// }
+// .categories__link:focus {
+//   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+//     1px 4px 6px rgba(0, 0, 0, 0.16);
+// }
+// .categories__overlay-box {
+//   position: relative;
+//   overflow: hidden;
+// }
+// .categories__overlay-shade {
+//   position: absolute;
+//   bottom: -100%;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   background: rgba(33, 150, 243, 0.9);
+//   transform: translateY(0%);
+//   transition: transform 250ms ease;
+// }
+// .categories__link:hover .categories__overlay-shade,
+// .categories__link:focus .categories__overlay-shade {
+//   transform: translateY(-100%);
+// }
+
+// .categories__overlay-shade > p {
+//   font-size: 18px;
+//   font-weight: normal;
+//   line-height: 1.56;
+//   letter-spacing: 0.03em;
+//   color: #ffffff;
+//   margin: 63px 24px;
+// }
