--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,31 +1,74 @@
 /*========================= Clients ===================================*/
-.clients__heading-second {
-  padding-bottom: 50px;
-  text-align: center;
-}
 .clients {
   background-color: #ffffff;
-  padding: 94px 0px;
+  padding: 60px 0px;
+  margin: 0 auto;
+  width: 480px;
+
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding: 94px 0px;
+    max-width: 1600px;
+  }
+}
+.clients__heading-second {
+  padding-bottom: 30px;
+  text-align: center;
+
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 50px;
+  }
 }
 .clients__list {
   display: flex;
-  justify-content: space-between;
-  padding-right: 0;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
   margin: 0;
-  padding-left: 0;
+  padding: 0;
+
+  & .clients__item:nth-child(-n + 4) {
+    margin-bottom: 30px;
+    @media screen and (min-width: 768px) {
+      margin-bottom: 0;
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    & .clients__item:nth-child(-n + 3) {
+      margin-bottom: 30px;
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    justify-content: space-between;
+    & .clients__item:nth-child(-n + 3) {
+      margin-bottom: 0px;
+    }
+  }
 }
+
 .clients__item {
   display: flex;
   height: 92px;
-  width: 170px;
+  width: calc((100% - 4 * 15px) / 2);
   border: 1px solid #afb1b8;
   border-radius: 4px;
-  margin: 0px;
+  margin: 0 15px;
   fill: #afb1b8;
   cursor: pointer;
   transition-property: fill, border;
   transition-duration: var(--time);
   transition-timing-function: var(--time-f);
+
+  @media screen and (min-width: 768px) {
+    width: calc((100% - 6 * 15px) / 3);
+  }
+  @media screen and (min-width: 1200px) {
+    width: 170px;
+    margin: 0;
+  }
 }
 .clients__item:hover,
 .clients__item:focus {
