--- a/sass/layout/_example.scss
+++ b/sass/layout/_example.scss
@@ -1,31 +1,40 @@
 /*========================= Example ===================================*/
-.example-section {
-  padding: 0px 0px 94px 0px;
-  background-color: #ffffff;
-}
-.example-section__heading-second {
-  padding-bottom: 50px;
-  text-align: center;
-}
-.example-section__heading-third {
-  color: #ffffff;
-  margin: 0;
-}
 
-.example-section__box {
-  display: flex;
-  justify-content: space-between;
-  margin: 0;
-  padding-left: 0;
-  position: relative;
+.example-section {
+  display: none;
 }
-.example-section__description-box {
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 70px;
-  width: 370px;
-  background: rgba(47, 48, 58, 0.8);
-  bottom: 0px;
+@media screen and (min-width: 1200px) {
+  .example-section {
+    display: block;
+    max-width: 1600px;
+    margin: 0 auto;
+    padding: 0px 0px 94px 0px;
+    background-color: #ffffff;
+  }
+  .example-section__heading-second {
+    padding-bottom: 50px;
+    text-align: center;
+  }
+  .example-section__heading-third {
+    color: #ffffff;
+    margin: 0;
+  }
+
+  .example-section__box {
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
+    padding-left: 0;
+    position: relative;
+  }
+  .example-section__description-box {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 70px;
+    width: 370px;
+    background: rgba(47, 48, 58, 0.8);
+    bottom: 0px;
+  }
 }
