--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,23 +1,58 @@
 /*========================= Footer ===================================*/
 .footer {
   background-color: var(--background2-color);
+  text-align: center;
+  padding: 60px 0;
+  margin: 0 auto;
+  width: 480px;
+
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+    // padding: 0;
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 1600px;
+    text-align: left;
+    padding: 0;
+  }
 }
-.footer__container {
-  display: flex;
+@media screen and (min-width: 768px) {
+  .footer__container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    &:last-child {
+      justify-content: center;
+    }
+  }
+  .footer__style {
+    display: flex;
+    flex-direction: column;
+    padding-right: 85px;
+    // width: 400px;
+  }
 }
-.footer__style {
+@media screen and (min-width: 1200px) {
+  .footer__container {
+    display: flex;
+  }
+  .footer__style {
+    display: flex;
+    flex-direction: column;
+    padding: 60px 70px 60px 0px;
+    width: 400px;
+  }
+}
+
+.footer__join {
   display: flex;
   flex-direction: column;
-  padding: 60px 70px 60px 0px;
-  width: 400px;
+
+  @media screen and (min-width: 1200px) {
+    padding: 72px 93px 0 0;
+  }
 }
-/* .footer > .container > .footer__style > .logo {
-  padding-bottom: 20px;
-  margin: 0;
-} */
 .footer__logo {
-  padding-bottom: 20px;
-  margin: 0;
   padding-bottom: 20px;
   margin: 0;
   font-family: var(--secondary-font);
@@ -33,16 +68,19 @@
 
 .footer__contacts {
   padding-left: 0;
-  margin: 0;
+  margin: 20px 0 0 0;
+
+  @media screen and (min-width: 1200px) {
+    margin: 0;
+  }
 }
 
 .footer__contact:not(:last-child) {
-  margin: 0px 0px 9px 0px;
-}
-.footer__join {
-  display: flex;
-  flex-direction: column;
-  padding: 72px 93px 0 0;
+  margin: 0px 0px 8px 0px;
+
+  @media screen and (min-width: 1200px) {
+    margin: 0px 0px 9px 0px;
+  }
 }
 .footer__heading-second {
   font-family: var(--primery-font);
@@ -52,9 +90,19 @@
   line-height: 1.5;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  text-align: left;
   color: #ffffff;
-  padding: 0;
+  padding: 60px 0 0 0;
+  text-align: center;
+
+  // @media screen and (min-width: 768px) {
+  //   &:not(:last-child) {
+  //     padding: 0;
+  //   }
+  // }
+  @media screen and (min-width: 1200px) {
+    padding: 0;
+    text-align: left;
+  }
 }
 .footer__socials {
   display: flex;
@@ -86,22 +134,36 @@
 }
 .footer__email-form {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
+  justify-content: center;
+
+  @media screen and (min-width: 768px) {
+    flex-wrap: nowrap;
+    flex-direction: column;
+  }
+  @media screen and (min-width: 1200px) {
+    flex-wrap: nowrap;
+  }
 }
 .footer__lable {
   display: flex;
   margin-top: 20px;
 }
 .footer__email {
-  width: 358px;
   height: 50px;
+  width: 450px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   padding: 15px 0px 15px 16px;
   background: inherit;
-  margin-right: 12px;
   color: rgba(255, 255, 255, 0.6);
+
+  @media screen and (min-width: 1200px) {
+    width: 358px;
+    margin-right: 12px;
+  }
 }
 .footer__email::placeholder {
   font-size: 16px;
@@ -134,5 +196,8 @@
 .footer__subscribe {
   display: flex;
   flex-direction: column;
-  padding: 72px 0 0 0;
+
+  @media screen and (min-width: 1200px) {
+    padding: 72px 0 0 0;
+  }
 }
