--- a/sass/layout/_modal-form.scss
+++ b/sass/layout/_modal-form.scss
@@ -1,8 +1,9 @@
 /*========================= Modal form ===================================*/
+/*====================== Mobile version =======================*/
 .modal {
   position: absolute;
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 609px;
   left: 50%;
   top: 50%;
   background: #ffffff;
@@ -94,7 +95,7 @@
 .modal__form-cb {
   display: flex;
   align-items: center;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.1;
   letter-spacing: 0.03em;
   color: #757575;
@@ -153,7 +154,7 @@
   overflow: hidden;
 }
 .modal__form-cb-button {
-  margin: 0 123px 0 125px;
+  margin: 0 85px;
 }
 .modal__form-item-input:hover,
 .modal__form-item-input:focus {
@@ -166,3 +167,174 @@
 .modal__form-item-input:focus + svg {
   fill: var(--primery-color);
 }
+
+/*====================== Tablet version =======================*/
+
+/*====================== Desktop version =======================*/
+// .modal {
+//   position: absolute;
+//   width: 528px;
+//   height: 581px;
+//   left: 50%;
+//   top: 50%;
+//   background: #ffffff;
+//   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+//     0px 2px 1px rgba(0, 0, 0, 0.2);
+//   border-radius: 4px;
+//   transform: translate(-50%, -50%) scale(1);
+//   transition: transform var(--time) var(--time-f);
+//   padding: 40px;
+// }
+// .modal__close-button {
+//   position: fixed;
+//   display: flex;
+//   width: 30px;
+//   height: 30px;
+//   border-radius: 50%;
+//   top: 8px;
+//   right: 8px;
+//   padding: 0;
+//   margin: 0;
+//   justify-content: center;
+//   align-items: center;
+//   background: #ffffff;
+//   border: 1px solid rgba(0, 0, 0, 0.1);
+//   transition-property: fill;
+//   transition-duration: var(--time);
+//   transition-timing-function: var(--time-f);
+// }
+// .modal__close-button:hover,
+// .modal__close-button:focus {
+//   cursor: pointer;
+//   fill: var(--primery-color);
+//   outline: none;
+// }
+// .modal__heading {
+//   font-size: 20px;
+//   line-height: 1.15;
+//   letter-spacing: 0.03em;
+// }
+// .modal__form {
+//   margin-top: 12px;
+// }
+// .modal__form-item {
+//   display: block;
+//   position: relative;
+//   font-size: 12px;
+//   line-height: 1.1;
+//   letter-spacing: 0.01em;
+//   color: #757575;
+//   transition-property: border;
+//   transition-duration: var(--time);
+//   transition-timing-function: var(--time-f);
+// }
+// .modal__form-item:nth-child(-n + 3) {
+//   margin-bottom: 10px;
+// }
+// .modal__form-item:nth-child(4) {
+//   margin-bottom: 20px;
+// }
+// .modal__form-item-input {
+//   width: 100%;
+//   height: 40px;
+//   border: 1px solid rgba(33, 33, 33, 0.2);
+//   border-radius: 4px;
+//   margin-top: 4px;
+//   padding: 0px 12px 0px 42px;
+//   transition-property: fill, border;
+//   transition-duration: var(--time);
+//   transition-timing-function: var(--time-f);
+// }
+// .modal__form-item-input--msg {
+//   width: 100%;
+//   height: 128px;
+//   resize: none;
+//   font-family: inherit;
+//   padding: 12px 16px;
+// }
+// .modal__form-item-icon {
+//   position: absolute;
+//   top: 50%;
+//   left: 12px;
+//   transition-property: fill;
+//   transition-duration: var(--time);
+//   transition-timing-function: var(--time-f);
+// }
+// .modal__form-item-input--msg::placeholder {
+//   color: rgba(117, 117, 117, 0.5);
+// }
+// .modal__form-cb {
+//   display: flex;
+//   align-items: center;
+//   font-size: 14px;
+//   line-height: 1.1;
+//   letter-spacing: 0.03em;
+//   color: #757575;
+//   margin-bottom: 30px;
+//   justify-content: center;
+// }
+// .modal__form-cb a {
+//   text-decoration: underline;
+//   color: var(--primery-color);
+//   margin-left: 5px;
+// }
+// .modal__form-cb::before {
+//   content: '';
+//   width: 16px;
+//   height: 15px;
+//   border: 2px solid var(--main-txt-color);
+//   border-radius: 2px;
+//   margin-right: 7px;
+// }
+// .modal__form-checkbox:checked + .modal__form-cb::before {
+//   background-color: var(--primery-color);
+//   background-image: url(../images/icon-check.svg);
+//   background-repeat: no-repeat;
+//   background-position: center;
+//   background-size: contain;
+//   border: 2px solid var(--primery-color);
+//   transition-property: border;
+//   transition-duration: var(--time);
+//   transition-timing-function: var(--time-f);
+// }
+// .modal__form-checkbox:focus + .modal__form-cb::before {
+//   transition-property: border;
+//   transition-duration: var(--time);
+//   transition-timing-function: var(--time-f);
+// }
+// .modal__form-checkbox:focus + .modal__form-cb::before {
+//   border: 2px solid var(--primery-color);
+// }
+// .modal__form-checkbox:hover + .modal__form-cb::before {
+//   transition-property: border;
+//   transition-duration: var(--time);
+//   transition-timing-function: var(--time-f);
+//   cursor: pointer;
+// }
+// .modal__form-checkbox:hover + .modal__form-cb::before {
+//   border: 2px solid var(--primery-color);
+// }
+// .modal__form-checkbox {
+//   position: absolute;
+//   width: 1px;
+//   height: 1px;
+//   margin: -1px;
+//   border: 0;
+//   padding: 0;
+//   clip: rect(0 0 0 0);
+//   overflow: hidden;
+// }
+// .modal__form-cb-button {
+//   margin: 0 123px 0 125px;
+// }
+// .modal__form-item-input:hover,
+// .modal__form-item-input:focus {
+//   outline: none;
+//   border: 1px solid var(--primery-color);
+// }
+// .modal__form-item:hover {
+//   fill: var(--primery-color);
+// }
+// .modal__form-item-input:focus + svg {
+//   fill: var(--primery-color);
+// }
