add mob-menu and adopted photo

--- a/sass/layout/_example.scss
+++ b/sass/layout/_example.scss
@@ -6,7 +6,7 @@
 @media screen and (min-width: 1200px) {
   .example-section {
     display: block;
-    max-width: 1600px;
+    width: 1600px;
     margin: 0 auto;
     padding: 0px 0px 94px 0px;
     background-color: #ffffff;
