--- a/css/main.css
+++ b/css/main.css
@@ -196,13 +196,13 @@ ol {
 
 /*Вынесены стили объектов*/
 .header {
-  position: relative;
   width: 480px;
   height: 60px;
   margin: 0 auto 0;
   background-color: #ffffff;
   border-bottom: 1px solid #ececec;
   overflow: hidden;
+  position: relative;
 }
 
 @media screen and (min-width: 768px) {
@@ -210,7 +210,7 @@ ol {
     position: static;
     height: 80px;
     text-align: center;
-    padding: 20px 15px;
+    padding: 20px 0px;
     width: 768px;
   }
 }
@@ -239,7 +239,8 @@ ol {
 }
 
 .header-navbar__logo {
-  margin-right: 93px;
+  margin-right: -webkit-calc(450px - 134px - 40px);
+  margin-right: calc(450px - 134px - 40px);
   margin-left: 0px;
 }
 
@@ -270,13 +271,17 @@ ol {
     padding: 0;
     margin: 0;
   }
+  .header-style {
+    margin: 0 15px;
+  }
   .header-adress {
     margin: 0 0 0 auto;
+    padding: 0;
   }
   .header-navbar__item-tablet:first-child {
     margin-bottom: 10px;
   }
-  .header-navbar__item:not(:last-child) {
+  .header-navbar__boxes > .header-navbar__item:not(:last-child) {
     margin-right: 50px;
   }
   .header-navbar__link:not(:last-child) {
@@ -363,6 +368,12 @@ ol {
   .header-navbar__item:first-child {
     margin-bottom: 0px;
   }
+  .header-navbar__item:not(:last-child) {
+    margin-right: 50px;
+  }
+  .header-style {
+    margin: 0;
+  }
 }
 
 .header-navbar__item {
@@ -384,28 +395,12 @@ ol {
   }
 }
 
-.header-navbar-menu__container {
-  display: none;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 100%;
-  background-color: green;
-  padding: 0;
-  text-align: center;
-}
-
-.header-navbar-menu__container.is-open {
-  display: block;
-}
-
-/*-------------------------------------------------------------------------------------------------------*/
 /*========================= Hero ===================================*/
 .hero {
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../sass/img-bg_mob@1x.jpg);
-  background-image: -webkit-linear-gradient(left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../sass/img-bg_mob@1x.jpg);
-  background-image: -o-linear-gradient(left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../sass/img-bg_mob@1x.jpg);
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../sass/img-bg_mob@1x.jpg);
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/img-bg_mob@1x.jpg);
+  background-image: -webkit-linear-gradient(left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/img-bg_mob@1x.jpg);
+  background-image: -o-linear-gradient(left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/img-bg_mob@1x.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/img-bg_mob@1x.jpg);
   background-color: var(--background2-color);
   background-position: center;
   background-repeat: no-repeat;
@@ -418,25 +413,52 @@ ol {
   margin: 0 auto 0;
 }
 
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (-o-min-device-pixel-ratio: 2/1), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/img-bg_mob@2x.jpg);
+    background-image: -webkit-linear-gradient(left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/img-bg_mob@2x.jpg);
+    background-image: -o-linear-gradient(left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/img-bg_mob@2x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/img-bg_mob@2x.jpg);
+  }
+}
+
 @media screen and (min-width: 768px) {
   .hero {
+    width: 768px;
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../sass/img-bg_tab@1x.jpg);
     background-image: -webkit-linear-gradient(left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../sass/img-bg_tab@1x.jpg);
     background-image: -o-linear-gradient(left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../sass/img-bg_tab@1x.jpg);
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../sass/img-bg_tab@1x.jpg);
-    width: 768px;
+  }
+}
+
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-o-min-device-pixel-ratio: 2/1), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/img-bg_tab@2x.jpg);
+    background-image: -webkit-linear-gradient(left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/img-bg_tab@2x.jpg);
+    background-image: -o-linear-gradient(left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/img-bg_tab@2x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/img-bg_tab@2x.jpg);
   }
 }
 
 @media screen and (min-width: 1200px) {
   .hero {
+    padding: 200px 0px;
+    width: 1600px;
+    height: 600px;
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../sass/img-bg_desk@1x.jpg);
     background-image: -webkit-linear-gradient(left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../sass/img-bg_desk@1x.jpg);
     background-image: -o-linear-gradient(left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../sass/img-bg_desk@1x.jpg);
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../sass/img-bg_desk@1x.jpg);
-    padding: 200px 0px;
-    width: 1600px;
-    height: 600px;
+  }
+}
+
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-o-min-device-pixel-ratio: 2/1), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/img-bg_desk@2x.jpg);
+    background-image: -webkit-linear-gradient(left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/img-bg_desk@2x.jpg);
+    background-image: -o-linear-gradient(left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/img-bg_desk@2x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/img-bg_desk@2x.jpg);
   }
 }
 
@@ -464,6 +486,10 @@ ol {
     width: 1600px;
     padding: 94px 0px;
   }
+}
+
+.credo__text {
+  margin: 0 15px;
 }
 
 .credo {
@@ -585,7 +611,7 @@ ol {
 @media screen and (min-width: 1200px) {
   .example-section {
     display: block;
-    max-width: 1600px;
+    width: 1600px;
     margin: 0 auto;
     padding: 0px 0px 94px 0px;
     background-color: #ffffff;
@@ -642,13 +668,13 @@ ol {
 
 @media screen and (min-width: 768px) {
   .team {
-    max-width: 768px;
+    width: 768px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .team {
-    max-width: 1600px;
+    width: 1600px;
     padding: 94px 0px;
   }
 }
@@ -856,14 +882,14 @@ ol {
 
 @media screen and (min-width: 768px) {
   .clients {
-    max-width: 768px;
+    width: 768px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .clients {
     padding: 94px 0px;
-    max-width: 1600px;
+    width: 1600px;
   }
 }
 
@@ -1000,7 +1026,8 @@ ol {
   border: none;
   background-color: transparent;
   padding: 0;
-  margin: 0 0 0 262px;
+  margin-right: -webkit-calc(100vw - 2 * 15px);
+  margin-right: calc(100vw - 2 * 15px);
   -webkit-transition-property: fill;
   -o-transition-property: fill;
   transition-property: fill;
@@ -1010,6 +1037,7 @@ ol {
   -webkit-transition-timing-function: var(--time-f);
        -o-transition-timing-function: var(--time-f);
           transition-timing-function: var(--time-f);
+  z-index: 1;
 }
 
 @media screen and (min-width: 768px) {
@@ -1072,7 +1100,21 @@ ol {
 
 /*Конец вынесения стилей кнопок*/
 .button-section {
+  width: 480px;
+  margin: 0 auto;
   background-color: #ffffff;
+}
+
+@media screen and (min-width: 768px) {
+  .button-section {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .button-section {
+    width: 1600px;
+  }
 }
 
 .button-section__boxes {
@@ -1085,6 +1127,22 @@ ol {
           flex-wrap: wrap;
   margin: 0;
   padding: 60px 0px 40px 15px;
+}
+
+@media screen and (min-width: 768px) {
+  .button-section__boxes {
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .button-section__boxes {
+    padding-bottom: 50px;
+  }
 }
 
 .button-section__item:not(:last-child) {
@@ -1100,10 +1158,23 @@ ol {
 }
 
 /*========================= Categories portfolio ===================================*/
-/*====================== Mobile version =======================*/
 .categories-section {
   background-color: #ffffff;
   padding: 0px 0px 60px 0px;
+  width: 480px;
+  margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+  .categories-section {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .categories-section {
+    width: 1600px;
+  }
 }
 
 .categories {
@@ -1122,6 +1193,24 @@ ol {
           justify-content: center;
 }
 
+@media screen and (min-width: 768px) {
+  .categories {
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .categories {
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
 .categories__item {
   background-color: #ffffff;
   -webkit-transition-property: -webkit-box-shadow;
@@ -1136,6 +1225,54 @@ ol {
        -o-transition-timing-function: var(--time-f);
           transition-timing-function: var(--time-f);
   display: block;
+  width: 450px;
+}
+
+@media screen and (min-width: 768px) {
+  .categories__item {
+    width: 354px;
+    margin: 0 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .categories__item {
+    width: 370px;
+  }
+}
+
+.categories__link {
+  display: block;
+  width: 450px;
+}
+
+@media screen and (min-width: 768px) {
+  .categories__link {
+    width: 354px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .categories__link {
+    width: 370px;
+  }
+}
+
+.categories__img {
+  width: 450px;
+  height: 294px;
+}
+
+@media screen and (min-width: 768px) {
+  .categories__img {
+    width: 354px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .categories__img {
+    width: 370px;
+  }
 }
 
 .categories__description {
@@ -1160,10 +1297,6 @@ ol {
 .categories__item:hover {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.categories__link {
-  display: block;
 }
 
 .categories__link:focus {
@@ -1209,8 +1342,6 @@ ol {
   margin: 63px 24px;
 }
 
-/*====================== Tablet version =======================*/
-/*====================== Desktop version =======================*/
 /*========================= Footer ===================================*/
 .footer {
   background-color: var(--background2-color);
@@ -1222,13 +1353,13 @@ ol {
 
 @media screen and (min-width: 768px) {
   .footer {
-    max-width: 768px;
+    width: 768px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .footer {
-    max-width: 1600px;
+    width: 1600px;
     text-align: left;
     padding: 0;
   }
@@ -1243,10 +1374,10 @@ ol {
     -webkit-flex-wrap: wrap;
         -ms-flex-wrap: wrap;
             flex-wrap: wrap;
-    -webkit-box-pack: justify;
-    -webkit-justify-content: space-between;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -webkit-box-align: baseline;
+    -webkit-align-items: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
   }
   .footer__container:last-child {
     -webkit-box-pack: center;
@@ -1265,6 +1396,7 @@ ol {
         -ms-flex-direction: column;
             flex-direction: column;
     padding-right: 85px;
+    margin-bottom: 60px;
   }
 }
 
@@ -1357,9 +1489,14 @@ ol {
   text-align: center;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
   .footer__heading-second {
     padding: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__heading-second {
     text-align: left;
   }
 }
@@ -1872,4 +2009,139 @@ ol {
 
 /*====================== Tablet version =======================*/
 /*====================== Desktop version =======================*/
+.header-navbar-menu__container {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 480px;
+  height: 100%;
+  background-color: #ffffff;
+  padding: 48px 0 48px 40px;
+  text-align: left;
+}
+
+@media screen and (min-width: 480px) {
+  .header-navbar-menu__container {
+    left: -webkit-calc((100vw - 480px) / 2);
+    left: calc((100vw - 480px) / 2);
+  }
+}
+
+.header-navbar-menu__container.is-open {
+  display: block;
+}
+
+@media screen and (min-width: 768px) {
+  .header-navbar-menu__container.is-open {
+    display: none;
+  }
+}
+
+.header-navbar-menu__boxes {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0;
+  margin: 0;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.header-navbar-menu__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  margin-bottom: 32px;
+  color: var(--main-txt-color);
+  -webkit-transition-property: color;
+  -o-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: var(--time);
+       -o-transition-duration: var(--time);
+          transition-duration: var(--time);
+  -webkit-transition-timing-function: var(--time-f);
+       -o-transition-timing-function: var(--time-f);
+          transition-timing-function: var(--time-f);
+}
+
+.header-navbar-menu__link:hover {
+  color: var(--primery-color);
+}
+
+.header-navbar-menu__link:focus {
+  color: var(--primery-color);
+}
+
+.header-navbar-menu__link:nth-child(-n + 2) {
+  font-size: 34px;
+}
+
+.header-navbar-menu__link--grey-color {
+  color: #757575;
+}
+
+.header-navbar-menu__item:nth-child(n + 1) {
+  margin-bottom: 36px;
+}
+
+.header-navbar-menu__item:nth-child(n + 2) {
+  margin-bottom: 32px;
+}
+
+.header-navbar-menu__item:nth-child(n + 3) {
+  margin-bottom: 302px;
+}
+
+.header-navbar-menu__item:nth-child(n + 4) {
+  margin-bottom: 32px;
+}
+
+.header-navbar-menu__item:nth-child(n + 5) {
+  margin-bottom: 0;
+}
+
+.header-navbar-menu__socials {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0;
+  margin: 64px 0 48px 0;
+}
+
+.header-navbar-menu__socials-list:not(:last-child) {
+  margin-right: 20px;
+}
+
+.header-navbar-menu__socials-link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  margin-bottom: 32px;
+  color: #757575;
+  -webkit-transition-property: color;
+  -o-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: var(--time);
+       -o-transition-duration: var(--time);
+          transition-duration: var(--time);
+  -webkit-transition-timing-function: var(--time-f);
+       -o-transition-timing-function: var(--time-f);
+          transition-timing-function: var(--time-f);
+}
+
+.header-navbar-menu__socials-link:hover {
+  color: var(--primery-color);
+}
+
+.header-navbar-menu__socials-link:focus {
+  color: var(--primery-color);
+}
 /*# sourceMappingURL=main.css.map */
