--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -21,10 +21,11 @@
   border: none;
   background-color: transparent;
   padding: 0;
-  margin: 0 0 0 262px;
+  margin-right: calc(100vw - 2 * 15px);
   transition-property: fill;
   transition-duration: var(--time);
   transition-timing-function: var(--time-f);
+  z-index: 1;
 
   @media screen and (min-width: 768px) {
     display: none;
@@ -72,14 +73,34 @@
 /*Конец вынесения стилей кнопок*/
 
 .button-section {
+  width: 480px;
+  // display: block;
+  margin: 0 auto;
   background-color: #ffffff;
+
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 1600px;
+    // padding: 94px 0px;
+  }
 }
+
 .button-section__boxes {
   display: flex;
   flex-wrap: wrap;
-  // justify-content: center;
+
   margin: 0;
   padding: 60px 0px 40px 15px;
+
+  @media screen and (min-width: 768px) {
+    justify-content: center;
+    padding-bottom: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 50px;
+  }
 }
 .button-section__item:not(:last-child) {
   margin-right: 8px;
