--- a/sass/layout/_categories.scss
+++ b/sass/layout/_categories.scss
@@ -1,15 +1,29 @@
 /*========================= Categories portfolio ===================================*/
-/*====================== Mobile version =======================*/
 .categories-section {
   background-color: #ffffff;
   padding: 0px 0px 60px 0px;
+  width: 480px;
+  margin: 0 auto;
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 1600px;
+  }
 }
+
 .categories {
   display: flex;
   flex-wrap: wrap;
   padding: 0;
   margin: 0;
   justify-content: center;
+  @media screen and (min-width: 768px) {
+    justify-content: flex-start;
+  }
+  @media screen and (min-width: 1200px) {
+    justify-content: center;
+  }
 }
 .categories__item {
   background-color: #ffffff;
@@ -17,6 +31,35 @@
   transition-duration: var(--time);
   transition-timing-function: var(--time-f);
   display: block;
+  width: 450px;
+
+  @media screen and (min-width: 768px) {
+    width: 354px;
+    margin: 0 15px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 370px;
+  }
+}
+.categories__link {
+  display: block;
+  width: 450px;
+  @media screen and (min-width: 768px) {
+    width: 354px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 370px;
+  }
+}
+.categories__img {
+  width: 450px;
+  height: 294px;
+  @media screen and (min-width: 768px) {
+    width: 354px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 370px;
+  }
 }
 .categories__description {
   padding: 20px 0px;
@@ -30,15 +73,13 @@
 .categories__text {
   margin: 0 24px;
 }
+
 .categories__text {
   margin-top: 4px;
 }
 .categories__item:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-.categories__link {
-  display: block;
 }
 .categories__link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
@@ -71,82 +112,3 @@
   color: #ffffff;
   margin: 63px 24px;
 }
-
-/*====================== Tablet version =======================*/
-
-/*====================== Desktop version =======================*/
-
-// .categories-section {
-//   background-color: #ffffff;
-//   padding: 0px 0px 94px 0px;
-// }
-// .categories {
-//   display: flex;
-//   flex-wrap: wrap;
-//   padding: 0;
-//   margin: 0;
-//   justify-content: center;
-// }
-// .categories__item {
-//   background-color: #ffffff;
-//   transition-property: box-shadow;
-//   transition-duration: var(--time);
-//   transition-timing-function: var(--time-f);
-//   display: block;
-// }
-// .categories__description {
-//   padding: 20px 0px;
-//   border: 1px solid #eeeeee;
-//   border-top: none;
-// }
-// .categories__item:not(:nth-child(3n)) {
-//   margin-right: 30px;
-// }
-// .categories__item:not(:nth-child(n + 7)) {
-//   margin-bottom: 30px;
-// }
-// .categories__title,
-// .categories__text {
-//   margin: 0 24px;
-// }
-// .categories__text {
-//   margin-top: 4px;
-// }
-// .categories__item:hover {
-//   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-//     1px 4px 6px rgba(0, 0, 0, 0.16);
-// }
-// .categories__link {
-//   display: block;
-// }
-// .categories__link:focus {
-//   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-//     1px 4px 6px rgba(0, 0, 0, 0.16);
-// }
-// .categories__overlay-box {
-//   position: relative;
-//   overflow: hidden;
-// }
-// .categories__overlay-shade {
-//   position: absolute;
-//   bottom: -100%;
-//   left: 0;
-//   width: 100%;
-//   height: 100%;
-//   background: rgba(33, 150, 243, 0.9);
-//   transform: translateY(0%);
-//   transition: transform 250ms ease;
-// }
-// .categories__link:hover .categories__overlay-shade,
-// .categories__link:focus .categories__overlay-shade {
-//   transform: translateY(-100%);
-// }
-
-// .categories__overlay-shade > p {
-//   font-size: 18px;
-//   font-weight: normal;
-//   line-height: 1.56;
-//   letter-spacing: 0.03em;
-//   color: #ffffff;
-//   margin: 63px 24px;
-// }
