--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -6,11 +6,11 @@
   width: 480px;
 
   @media screen and (min-width: 768px) {
-    max-width: 768px;
+    width: 768px;
   }
   @media screen and (min-width: 1200px) {
     padding: 94px 0px;
-    max-width: 1600px;
+    width: 1600px;
   }
 }
 .clients__heading-second {
