--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -7,11 +7,11 @@
   width: 480px;
 
   @media screen and (min-width: 768px) {
-    max-width: 768px;
+    width: 768px;
     // padding: 0;
   }
   @media screen and (min-width: 1200px) {
-    max-width: 1600px;
+    width: 1600px;
     text-align: left;
     padding: 0;
   }
@@ -20,7 +20,7 @@
   .footer__container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    align-items: baseline;
     &:last-child {
       justify-content: center;
     }
@@ -29,7 +29,7 @@
     display: flex;
     flex-direction: column;
     padding-right: 85px;
-    // width: 400px;
+    margin-bottom: 60px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -94,13 +94,10 @@
   padding: 60px 0 0 0;
   text-align: center;
 
-  // @media screen and (min-width: 768px) {
-  //   &:not(:last-child) {
-  //     padding: 0;
-  //   }
-  // }
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: 768px) {
     padding: 0;
+  }
+  @media screen and (min-width: 1200px) {
     text-align: left;
   }
 }
