--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -45,19 +45,19 @@
 
 /*Вынесены стили объектов*/
 .header {
-  position: relative;
   width: 480px;
   height: 60px;
   margin: 0 auto 0;
   background-color: #ffffff;
   border-bottom: 1px solid #ececec;
   overflow: hidden;
+  position: relative;
 
   @media screen and (min-width: 768px) {
     position: static;
     height: 80px;
     text-align: center;
-    padding: 20px 15px;
+    padding: 20px 0px;
     width: 768px;
   }
   @media screen and (min-width: 1200px) {
@@ -70,10 +70,11 @@
   justify-content: space-between;
   align-items: center;
   margin: 10px 15px;
+  // position: relative;
 }
 
 .header-navbar__logo {
-  margin-right: 93px;
+  margin-right: calc(450px - 134px - 40px);
   margin-left: 0px;
 
   @media screen and (min-width: 768px) {
@@ -93,14 +94,17 @@
     padding: 0;
     margin: 0;
   }
-
+  .header-style {
+    margin: 0 15px;
+  }
   .header-adress {
     margin: 0 0 0 auto;
+    padding: 0;
   }
   .header-navbar__item-tablet:first-child {
     margin-bottom: 10px;
   }
-  .header-navbar__item:not(:last-child) {
+  .header-navbar__boxes > .header-navbar__item:not(:last-child) {
     margin-right: 50px;
   }
   .header-navbar__link:not(:last-child) {
@@ -160,6 +164,12 @@
   .header-navbar__item:first-child {
     margin-bottom: 0px;
   }
+  .header-navbar__item:not(:last-child) {
+    margin-right: 50px;
+  }
+  .header-style {
+    margin: 0;
+  }
 }
 
 .header-navbar__item {
@@ -172,130 +182,3 @@
     margin: 0;
   }
 }
-
-.header-navbar-menu__container {
-  display: none;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 100%;
-  background-color: green;
-  padding: 0;
-  text-align: center;
-}
-.header-navbar-menu__container.is-open {
-  display: block;
-}
-
-/*-------------------------------------------------------------------------------------------------------*/
-// .header-navbar__logo {
-//   font-family: var(--secondary-font);
-//   font-weight: bold;
-//   font-size: 26px;
-//   line-height: 1.19;
-//   letter-spacing: 0.03em;
-//   color: var(--primery-color);
-// }
-// .header-navbar__logo > span {
-//   color: #000000;
-// }
-// .header-navbar__link {
-//   font-weight: 500;
-//   font-size: 14px;
-//   line-height: 1.14;
-//   letter-spacing: 0.02em;
-//   color: var(--main-txt-color);
-//   transition-property: color;
-//   transition-duration: var(--time);
-//   transition-timing-function: var(--time-f);
-// }
-// .header-navbar__link:hover,
-// .header-navbar__link:focus {
-//   color: var(--primery-color);
-// }
-// .header-navbar__link--active {
-//   color: var(--primery-color);
-// }
-
-// .header {
-//   height: 80px;
-//   background-color: #ffffff;
-//   text-align: center;
-//   border-bottom: 1px solid #ececec;
-//   padding: 24px 0 25px 0;
-//   overflow: hidden;
-// }
-// .header-style,
-// .header-navbar,
-// .header-adress,
-// .header-navbar__boxes {
-//   display: flex;
-//   align-items: center;
-//   padding: 0;
-//   margin: 0;
-// }
-// .header-navbar__logo {
-//   margin-right: 93px;
-//   margin-left: 0px;
-// }
-// .header-adress {
-//   margin-left: auto;
-// }
-// .header-navbar__item {
-//   display: flex;
-//   align-items: center;
-//   padding: 0;
-//   margin: 0 0 0 auto;
-// }
-// .header-navbar__item:not(:last-child) {
-//   margin-right: 50px;
-// }
-// .header-navbar__link:not(:last-child) {
-//   margin-right: 50px;
-// }
-// .header-navbar__item > a {
-//   display: inline-flex;
-//   flex-direction: row-reverse;
-// }
-// .header-navbar__link--underline {
-//   position: relative;
-// }
-// .header-navbar__link--underline::after {
-//   content: '';
-//   position: absolute;
-//   width: 100%;
-//   height: 4px;
-//   bottom: -36px;
-//   background-color: currentColor;
-//   border-radius: 2px;
-//   transition-property: translateY(100%);
-//   transition-duration: var(--time);
-//   transition-timing-function: var(--time-f);
-// }
-// .header-navbar__link--underline:hover::after,
-// .header-navbar__link--underline:focus::after {
-//   transform: translateY(-100%);
-//   background-color: var(--primery-color);
-// }
-// .header-navbar__item--uactive {
-//   position: relative;
-// }
-// .header-navbar__item--uactive::after {
-//   content: '';
-//   position: absolute;
-//   width: 100%;
-//   height: 4px;
-//   bottom: -32px;
-//   background-color: var(--primery-color);
-//   border-radius: 2px;
-// }
-// .header-navbar__link svg {
-//   margin: 0px 10px 0px 0px;
-//   transition-property: fill;
-//   transition-duration: var(--time);
-//   transition-timing-function: var(--time-f);
-// }
-// .header-navbar__link:hover svg,
-// .header-navbar__link:focus svg {
-//   fill: var(--primery-color);
-// }
