--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -7,10 +7,10 @@
   padding: 60px 0px;
 
   @media screen and (min-width: 768px) {
-    max-width: 768px;
+    width: 768px;
   }
   @media screen and (min-width: 1200px) {
-    max-width: 1600px;
+    width: 1600px;
     padding: 94px 0px;
   }
 }
