--- a/css/main.css
+++ b/css/main.css
@@ -135,6 +135,10 @@ ol {
   color: #757575;
 }
 
+body {
+  background-color: #fff;
+}
+
 /*========================= Header ===================================*/
 /*Вынесены стили текста*/
 .header-navbar__logo {
@@ -488,8 +492,10 @@ ol {
   }
 }
 
-.credo__text {
-  margin: 0 15px;
+@media screen and (max-width: 767px) {
+  .credo__text {
+    margin: 0 15px;
+  }
 }
 
 .credo {
@@ -1212,6 +1218,10 @@ ol {
 }
 
 .categories__item {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
   background-color: #ffffff;
   -webkit-transition-property: -webkit-box-shadow;
   transition-property: -webkit-box-shadow;
@@ -1224,8 +1234,16 @@ ol {
   -webkit-transition-timing-function: var(--time-f);
        -o-transition-timing-function: var(--time-f);
           transition-timing-function: var(--time-f);
-  display: block;
   width: 450px;
+}
+
+.categories__item:not(:last-child) {
+  margin-bottom: 30px;
+}
+
+.categories__item:hover {
+  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 @media screen and (min-width: 768px) {
@@ -1242,8 +1260,21 @@ ol {
 }
 
 .categories__link {
-  display: block;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   width: 450px;
+}
+
+.categories__link:focus {
+  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 @media screen and (min-width: 768px) {
@@ -1276,13 +1307,13 @@ ol {
 }
 
 .categories__description {
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   padding: 20px 0px;
   border: 1px solid #eeeeee;
   border-top: none;
-}
-
-.categories__item:not(:last-child) {
-  margin-bottom: 30px;
 }
 
 .categories__title,
@@ -1292,16 +1323,7 @@ ol {
 
 .categories__text {
   margin-top: 4px;
-}
-
-.categories__item:hover {
-  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.categories__link:focus {
-  -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-          box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  color: #757575;
 }
 
 .categories__overlay-box {
@@ -1402,21 +1424,11 @@ ol {
 
 @media screen and (min-width: 1200px) {
   .footer__container {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
+    -webkit-flex-wrap: nowrap;
+        -ms-flex-wrap: nowrap;
+            flex-wrap: nowrap;
   }
   .footer__style {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column;
     padding: 60px 70px 60px 0px;
     width: 400px;
   }
@@ -1460,19 +1472,19 @@ ol {
   margin: 20px 0 0 0;
 }
 
-@media screen and (min-width: 1200px) {
-  .footer__contacts {
-    margin: 0;
-  }
-}
-
-.footer__contact:not(:last-child) {
+.footer__contacts:not(:last-child) {
   margin: 0px 0px 8px 0px;
 }
 
 @media screen and (min-width: 1200px) {
-  .footer__contact:not(:last-child) {
+  .footer__contacts:not(:last-child) {
     margin: 0px 0px 9px 0px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__contacts {
+    margin: 0;
   }
 }
 
@@ -1547,13 +1559,12 @@ ol {
           transition-timing-function: var(--time-f);
 }
 
-.footer__socials-link svg {
-  fill: #ffffff;
+.footer__socials-link:hover, .footer__socials-link:focus {
+  background-color: var(--primery-color);
 }
 
-.footer__socials-link:hover,
-.footer__socials-link:focus {
-  background-color: var(--primery-color);
+.footer__socials-link svg {
+  fill: #ffffff;
 }
 
 .footer__email-form {
@@ -1592,6 +1603,11 @@ ol {
     -webkit-flex-wrap: nowrap;
         -ms-flex-wrap: nowrap;
             flex-wrap: nowrap;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
 }
 
@@ -1614,13 +1630,6 @@ ol {
   padding: 15px 0px 15px 16px;
   background: inherit;
   color: rgba(255, 255, 255, 0.6);
-}
-
-@media screen and (min-width: 1200px) {
-  .footer__email {
-    width: 358px;
-    margin-right: 12px;
-  }
 }
 
 .footer__email::-webkit-input-placeholder {
@@ -1649,6 +1658,13 @@ ol {
   line-height: 1.25;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__email {
+    width: 358px;
+    margin-right: 12px;
+  }
 }
 
 .footer__button {
@@ -1731,10 +1747,9 @@ ol {
 }
 
 /*========================= Modal form ===================================*/
-/*====================== Mobile version =======================*/
 .modal {
   position: absolute;
-  width: 450px;
+  width: 100%;
   height: 609px;
   left: 50%;
   top: 50%;
@@ -1752,6 +1767,13 @@ ol {
   transition: transform var(--time) var(--time-f);
   transition: transform var(--time) var(--time-f), -webkit-transform var(--time) var(--time-f);
   padding: 40px;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
 }
 
 .modal__close-button {
@@ -1789,8 +1811,7 @@ ol {
           transition-timing-function: var(--time-f);
 }
 
-.modal__close-button:hover,
-.modal__close-button:focus {
+.modal__close-button:hover, .modal__close-button:focus {
   cursor: pointer;
   fill: var(--primery-color);
   outline: none;
@@ -1798,8 +1819,15 @@ ol {
 
 .modal__heading {
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   letter-spacing: 0.03em;
+  text-align: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal__heading {
+    line-height: 1.15;
+  }
 }
 
 .modal__form {
@@ -1857,21 +1885,8 @@ ol {
   resize: none;
   font-family: inherit;
   padding: 12px 16px;
-}
-
-.modal__form-item-icon {
-  position: absolute;
-  top: 50%;
-  left: 12px;
-  -webkit-transition-property: fill;
-  -o-transition-property: fill;
-  transition-property: fill;
-  -webkit-transition-duration: var(--time);
-       -o-transition-duration: var(--time);
-          transition-duration: var(--time);
-  -webkit-transition-timing-function: var(--time-f);
-       -o-transition-timing-function: var(--time-f);
-          transition-timing-function: var(--time-f);
+  font-size: 14px;
+  line-height: 1.14;
 }
 
 .modal__form-item-input--msg::-webkit-input-placeholder {
@@ -1888,6 +1903,28 @@ ol {
 
 .modal__form-item-input--msg::placeholder {
   color: rgba(117, 117, 117, 0.5);
+}
+
+@media screen and (min-width: 1200px) {
+  .modal__form-item-input--msg {
+    font-size: 12px;
+    line-height: 1.17;
+  }
+}
+
+.modal__form-item-icon {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  -webkit-transition-property: fill;
+  -o-transition-property: fill;
+  transition-property: fill;
+  -webkit-transition-duration: var(--time);
+       -o-transition-duration: var(--time);
+          transition-duration: var(--time);
+  -webkit-transition-timing-function: var(--time-f);
+       -o-transition-timing-function: var(--time-f);
+          transition-timing-function: var(--time-f);
 }
 
 .modal__form-cb {
@@ -1910,12 +1947,6 @@ ol {
           justify-content: center;
 }
 
-.modal__form-cb a {
-  text-decoration: underline;
-  color: var(--primery-color);
-  margin-left: 5px;
-}
-
 .modal__form-cb::before {
   content: '';
   width: 16px;
@@ -1924,6 +1955,19 @@ ol {
   -webkit-border-radius: 2px;
           border-radius: 2px;
   margin-right: 7px;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal__form-cb {
+    font-size: 14px;
+    line-height: 1.71;
+  }
+}
+
+.modal__form-cb a {
+  text-decoration: underline;
+  color: var(--primery-color);
+  margin-left: 5px;
 }
 
 .modal__form-checkbox:checked + .modal__form-cb::before {
@@ -2012,11 +2056,12 @@ ol {
 .header-navbar-menu__container {
   display: none;
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 480px;
-  height: 100%;
-  background-color: #ffffff;
+  top: 50%;
+  left: 50%;
+  width: 100vw;
+  height: 100vw;
+  z-index: 2;
+  background-color: green;
   padding: 48px 0 48px 40px;
   text-align: left;
 }
