--- a/sass/base/_base-styles.scss
+++ b/sass/base/_base-styles.scss
@@ -2,6 +2,7 @@
 .container {
   width: 100%;
   margin: 0 auto 0;
+
   @media screen and (min-width: 480px) {
     width: 480px;
   }
@@ -69,4 +70,8 @@
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #757575;
+}
+
+body {
+  background-color: #fff;
 }
