--- a/sass/layout/_credo.scss
+++ b/sass/layout/_credo.scss
@@ -14,54 +14,50 @@
     padding: 94px 0px;
   }
 }
-.credo__text {
-  margin: 0 15px;
+@media screen and (max-width: 767px) {
+  .credo__text {
+    margin: 0 15px;
+  }
 }
 .credo {
   display: block;
   margin: 0 auto;
   padding: 0;
-  // width: 450px;
 
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    // height: 251px;
-    // width: 768px;
   }
 
   @media screen and (min-width: 1200px) {
     display: flex;
     justify-content: center;
-    // height: 251px;
     width: 1200px;
   }
 }
 
 @media screen and (min-width: 768px) {
   .credo__item {
-    // width: 354px;
     width: calc(100% / 2 - 2 * 15px);
-    // height: auto;
-  }
-  .credo__item:nth-child(odd) {
-    margin-right: 30px;
-  }
-  .credo__item:nth-child(-n + 2) {
-    margin-bottom: 30px;
+    &:nth-child(odd) {
+      margin-right: 30px;
+    }
+    &:nth-child(-n + 2) {
+      margin-bottom: 30px;
+    }
   }
 }
 @media screen and (min-width: 1200px) {
   .credo__item {
     width: 270px;
     height: auto;
-  }
-  .credo__item:not(:last-child) {
-    margin-right: 30px;
-  }
-  .credo__item:nth-child(-n + 2) {
-    margin-bottom: 0px;
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+    &:nth-child(-n + 2) {
+      margin-bottom: 0px;
+    }
   }
 }
 
@@ -94,11 +90,9 @@
   border-radius: 4px;
 
   @media screen and (min-width: 768px) {
-    // width: 354px;
     width: 100%;
   }
   @media screen and (min-width: 1200px) {
-    // width: 270px;
     width: 100%;
   }
 }
