--- a/sass/layout/_modal-form.scss
+++ b/sass/layout/_modal-form.scss
@@ -1,8 +1,8 @@
 /*========================= Modal form ===================================*/
-/*====================== Mobile version =======================*/
 .modal {
   position: absolute;
-  width: 450px;
+  // width: 450px;
+  width: 100%;
   height: 609px;
   left: 50%;
   top: 50%;
@@ -13,7 +13,18 @@
   transform: translate(-50%, -50%) scale(1);
   transition: transform var(--time) var(--time-f);
   padding: 40px;
+
+  // @media screen and (max-width: 479px) {
+  //   width: 80%;
+  //   left: calc(100vw / 2);
+  // }
+
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+    height: 581px;
+  }
 }
+
 .modal__close-button {
   position: fixed;
   display: flex;
@@ -31,17 +42,23 @@
   transition-property: fill;
   transition-duration: var(--time);
   transition-timing-function: var(--time-f);
+  &:hover,
+  &:focus {
+    cursor: pointer;
+    fill: var(--primery-color);
+    outline: none;
+  }
 }
-.modal__close-button:hover,
-.modal__close-button:focus {
-  cursor: pointer;
-  fill: var(--primery-color);
-  outline: none;
-}
+
 .modal__heading {
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   letter-spacing: 0.03em;
+  text-align: center;
+
+  @media screen and (min-width: 1200px) {
+    line-height: 1.15;
+  }
 }
 .modal__form {
   margin-top: 12px;
@@ -80,6 +97,16 @@
   resize: none;
   font-family: inherit;
   padding: 12px 16px;
+  font-size: 14px;
+  line-height: 1.14;
+  &::placeholder {
+    color: rgba(117, 117, 117, 0.5);
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 12px;
+    line-height: 1.17;
+  }
 }
 .modal__form-item-icon {
   position: absolute;
@@ -89,9 +116,7 @@
   transition-duration: var(--time);
   transition-timing-function: var(--time-f);
 }
-.modal__form-item-input--msg::placeholder {
-  color: rgba(117, 117, 117, 0.5);
-}
+
 .modal__form-cb {
   display: flex;
   align-items: center;
@@ -101,20 +126,32 @@
   color: #757575;
   margin-bottom: 30px;
   justify-content: center;
+  &::before {
+    content: '';
+    width: 16px;
+    height: 15px;
+    border: 2px solid var(--main-txt-color);
+    border-radius: 2px;
+    margin-right: 7px;
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 .modal__form-cb a {
   text-decoration: underline;
   color: var(--primery-color);
   margin-left: 5px;
 }
-.modal__form-cb::before {
-  content: '';
-  width: 16px;
-  height: 15px;
-  border: 2px solid var(--main-txt-color);
-  border-radius: 2px;
-  margin-right: 7px;
-}
+//   .modal__form-cb::before {
+//     content: '';
+//     width: 16px;
+//     height: 15px;
+//     border: 2px solid var(--main-txt-color);
+//     border-radius: 2px;
+//     margin-right: 7px;
+// }
 .modal__form-checkbox:checked + .modal__form-cb::before {
   background-color: var(--primery-color);
   background-image: url(../images/icon-check.svg);
@@ -171,20 +208,7 @@
 /*====================== Tablet version =======================*/
 
 /*====================== Desktop version =======================*/
-// .modal {
-//   position: absolute;
-//   width: 528px;
-//   height: 581px;
-//   left: 50%;
-//   top: 50%;
-//   background: #ffffff;
-//   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-//     0px 2px 1px rgba(0, 0, 0, 0.2);
-//   border-radius: 4px;
-//   transform: translate(-50%, -50%) scale(1);
-//   transition: transform var(--time) var(--time-f);
-//   padding: 40px;
-// }
+
 // .modal__close-button {
 //   position: fixed;
 //   display: flex;
