--- a/sass/layout/_navbar-menu.scss
+++ b/sass/layout/_navbar-menu.scss
@@ -1,11 +1,13 @@
 .header-navbar-menu__container {
   display: none;
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 480px;
-  height: 100%;
-  background-color: #ffffff;
+  top: 50%;
+  left: 50%;
+  width: 100vw;
+  height: 100vw;
+  z-index: 2;
+  // background-color: #ffffff;
+  background-color: green;
   padding: 48px 0 48px 40px;
   text-align: left;
 
