--- a/sass/base/_base-styles.scss
+++ b/sass/base/_base-styles.scss
@@ -5,6 +5,7 @@
 
   @media screen and (min-width: 480px) {
     width: 480px;
+    position: relative;
   }
   @media screen and (min-width: 768px) {
     width: 768px;
