--- a/sass/layout/_navbar-menu.scss
+++ b/sass/layout/_navbar-menu.scss
@@ -1,19 +1,19 @@
 .header-navbar-menu__container {
   display: none;
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: 0;
+  left: 0;
   width: 100vw;
   height: 100vw;
-  z-index: 2;
+  z-index: 0;
   // background-color: #ffffff;
   background-color: green;
   padding: 48px 0 48px 40px;
   text-align: left;
 
-  @media screen and (min-width: 480px) {
-    left: calc((100vw - 480px) / 2);
-  }
+  // @media screen and (min-width: 480px) {
+  //   left: calc((100vw - 480px) / 2);
+  // }
 }
 .header-navbar-menu__container.is-open {
   display: block;
@@ -22,6 +22,7 @@
   }
 }
 .header-navbar-menu__boxes {
+  position: absolute;
   display: flex;
   padding: 0;
   margin: 0;
