--- a/sass/layout/_modal-form.scss
+++ b/sass/layout/_modal-form.scss
@@ -1,8 +1,7 @@
 /*========================= Modal form ===================================*/
 .modal {
   position: absolute;
-  // width: 450px;
-  width: 100%;
+  width: 450px;
   height: 609px;
   left: 50%;
   top: 50%;
@@ -14,11 +13,10 @@
   transition: transform var(--time) var(--time-f);
   padding: 40px;
 
-  // @media screen and (max-width: 479px) {
-  //   width: 80%;
-  //   left: calc(100vw / 2);
-  // }
-
+  @media screen and (max-width: 479px) {
+    width: 95vw;
+    left: calc(100vw / 2);
+  }
   @media screen and (min-width: 1200px) {
     width: 528px;
     height: 581px;
