--- a/sass/layout/_navbar-menu.scss
+++ b/sass/layout/_navbar-menu.scss
@@ -4,15 +4,20 @@
   top: 0;
   left: 0;
   width: 100vw;
+  // width: 480px;
   height: 796px;
   background-color: #ffffff;
   padding: 48px 40px;
   text-align: left;
+  // @media screen and (max-width: 479px) {
+  //   width: 95vw;
+  //   left: calc(100vw / 2);
+  // }
 }
 .header-navbar-menu__container.is-open {
   display: flex;
   flex-direction: column;
-  margin: 0;
+  margin: 0 auto;
   justify-content: space-between;
   position: fixed;
   z-index: 1;
