fix navbar-menue sizes

--- a/css/main.css
+++ b/css/main.css
@@ -2128,6 +2128,12 @@ header {
   text-align: left;
 }
 
+@media screen and (max-width: 479px) {
+  .header-navbar-menu__container {
+    height: 100vw;
+  }
+}
+
 .header-navbar-menu__container.is-open {
   display: -webkit-box;
   display: -webkit-flex;
@@ -2202,6 +2208,16 @@ header {
   font-size: 34px;
 }
 
+@media screen and (max-width: 479px) {
+  .header-navbar-menu__link:nth-child(-n + 2) {
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 1.18;
+    letter-spacing: 0.02em;
+    margin-bottom: 0px;
+  }
+}
+
 .header-navbar-menu__link--blue-color {
   color: var(--primery-color);
 }
@@ -2214,12 +2230,29 @@ header {
   margin-bottom: 32px;
 }
 
+@media screen and (max-width: 479px) {
+  .header-navbar-menu__item {
+    margin-bottom: 12px;
+  }
+}
+
 .header-navbar-menu__socials {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   margin: 64px 0 0 0;
+}
+
+@media screen and (max-width: 479px) {
+  .header-navbar-menu__socials {
+    margin: 0;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 .header-navbar-menu__socials-list:not(:last-child) {
@@ -2231,7 +2264,6 @@ header {
   font-size: 18px;
   line-height: 1.22;
   letter-spacing: 0.02em;
-  margin-bottom: 32px;
   -webkit-transition-property: color;
   -o-transition-property: color;
   transition-property: color;
