--- a/sass/layout/_navbar-menu.scss
+++ b/sass/layout/_navbar-menu.scss
@@ -20,6 +20,7 @@
   justify-content: space-between;
   position: fixed;
   z-index: 1;
+  overflow-y: scroll;
 
   @media screen and (min-width: 768px) {
     display: none;
@@ -89,7 +90,15 @@
 }
 .header-navbar-menu__socials-list {
   &:not(:last-child) {
-    margin-right: 20px;
+    border-right: 1px solid rgba(33, 33, 33, 0.2);
+    padding-right: 10px;
+    margin-right: 10px;
+
+    @media screen and (max-width: 479px) {
+      border-right: 0;
+      padding-right: 0px;
+      margin-right: 0px;
+    }
   }
 }
 
