--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -92,7 +92,8 @@
     width: 768px;
   }
   @media screen and (min-width: 1200px) {
-    width: 1600px;
+    // width: 1600px;
+    width: 100%;
     // padding: 94px 0px;
   }
 }
