--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -14,7 +14,8 @@
   }
   @media screen and (min-width: 1200px) {
     padding: 94px 0px;
-    width: 1600px;
+    // width: 1600px;
+    width: 100%;
   }
 }
 .clients__heading-second {
