--- a/sass/layout/_credo.scss
+++ b/sass/layout/_credo.scss
@@ -14,7 +14,8 @@
     padding: 60px 0px;
   }
   @media screen and (min-width: 1200px) {
-    width: 1600px;
+    // width: 1600px;
+    width: 100%;
     padding: 94px 0px;
   }
 }
