--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -34,7 +34,8 @@
 
   @media screen and (min-width: 1200px) {
     padding: 200px 0px;
-    width: 1600px;
+    // width: 1600px;
+    width: 100%;
     height: 600px;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
       url(../images/img-bg_desk@1x.jpg);
