--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -13,7 +13,8 @@
     width: 768px;
   }
   @media screen and (min-width: 1200px) {
-    width: 1600px;
+    // width: 1600px;
+    width: 100%;
     padding: 94px 0px;
   }
 }
@@ -66,7 +67,8 @@
   border-radius: 0px 0px 4px 4px;
 
   @media screen and (max-width: 479px) {
-    width: 100%;
+    width: calc(100% - 30px);
+    // width: 100%;
   }
 
   @media screen and (min-width: 768px) {
